--- a/src/assets/Pages/SectionTwo/sectiontwo.css
+++ b/src/assets/Pages/SectionTwo/sectiontwo.css
@@ -89,6 +89,9 @@
 .about-me-p {
     font-size: 1.2rem;
     width: 50%;
+    border-top: 4px solid black;
+    margin: 10px;
+    padding: 10px;
 }
 
 .about-me-title{
@@ -127,6 +130,10 @@
     .about-me-p {
     font-size: 1.2rem;
     width: 100%;
+}
+.about-me-title{
+    text-align: center;
+    width: 200px;
 }
 
   }
