--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,37 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    text-decoration: none;
-    box-sizing: border-box;
+
+* {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  text-decoration: none;
+  box-sizing: border-box;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Scrollbar genişliği */
 ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Scrollbar arka planı */
-  ::-webkit-scrollbar-track {
-    background-color: black ;
-    border-radius: 0px;
-  }
-  
-  /* Scrollbar tutamacı (thumb) */
-  ::-webkit-scrollbar-thumb {
-    background-color: #E1ECDE;
-    border-radius: 10px;
-  }
-  
-  /* Hover (üzerine gelince) rengi */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+  width: 10px;
+}
+
+/* Scrollbar arka planı */
+::-webkit-scrollbar-track {
+  background-color: black;
+  border-radius: 0px;
+}
+
+/* Scrollbar tutamacı (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: #E1ECDE;
+  border-radius: 10px;
+}
+
+/* Hover (üzerine gelince) rengi */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
