--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap');
 
 * {
   padding: 0;
@@ -10,26 +11,34 @@
   box-sizing: border-box;
   outline: none;
   -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  
 }
 
-/* Scrollbar genişliği */
+a:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-/* Scrollbar arka planı */
+
 ::-webkit-scrollbar-track {
   background-color: black;
   border-radius: 0px;
 }
 
-/* Scrollbar tutamacı (thumb) */
+
 ::-webkit-scrollbar-thumb {
   background-color: #E1ECDE;
   border-radius: 10px;
 }
 
-/* Hover (üzerine gelince) rengi */
+
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
