--- a/src/assets/Pages/SectionOne/sectionone.css
+++ b/src/assets/Pages/SectionOne/sectionone.css
@@ -1,10 +1,10 @@
 .sec-one-right img {
-  width: auto;
+  width: 400px;
   height: 591px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
   transform: translateX(100px);
   transition: 0.8s ease-in-out;
-  object-fit: cover;
+
 }
 
 .sec-one-right img.visible {
